# rocket-drop-zone-analysis-otu

./: .dockerignore  .gitignore  BOUNDARY_FEATURE.md  Change_Integration_Checklist.md  DEBUG_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  ELLIPSE_GRID_EXPLAINED.md  FINAL_INTEGRATION_REPORT.md  FINAL_REPORT.md  FIXES_SUMMARY.md  FRONTEND_ENHANCEMENTS.md  GEE_TESTING_REPORT.md  GRID_DEBUG.md  GRID_FIX_SUMMARY.md  GRID_FIX_SUMMARY_FINAL.md  GRID_MATH_FIX.md  IMPLEMENTATION_ROADMAP.md  MANUAL_TEST_INSTRUCTIONS.md  MDPI_Service_Guide.md  NDVI_FIX_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  README_DEVELOPMENT.md  README_ECONOMICS.md  README_OVERVIEW.md  README_SCIENCE.md  README_SCIENTISTS.md  README_TECHNICAL.md  TILED_DOWNLOAD_GUIDE.md  Task_2_8_Uncertainty_Analysis_Completion_Report.md  Task_3_9_Supplementary_Materials_Package_Report.md  Task_4_1_Automated_Language_Check_Report.md  Task_4_4_Bibliography_Formatting_Report.md  Task_4_5_Integration_Guide.md  Task_4_5_Professional_Editing_Service_Completion_Report.md  Task_5_1_Economic_Calculator_Implementation_Report.md  Task_5_2_Economic_Worked_Example_Report.md  (+89 more)
Documents/: 00_MAIN_PLAN.md  AGENT_ASSIGNMENTS.md  IMPLEMENTATION_CHECKLIST.md  README.md
api/: main.py  models.py  preview.py  simulation_runner.py  zone_preview_logic.py
benchmarks/: benchmark_api.py  benchmark_id.py  benchmark_telemetry.py
config/: __init__.py  gee_config.py  otu_config.py  rocket_params.py  simulation_config.py  zones.py
core/: __init__.py  aerodynamics.py  algorithms.py  atmosphere.py  ballistics.py  base.py  dto.py  geo_utils.py  gpu_ballistics.py  monte_carlo.py  trajectory.py
db/: __init__.py
docs/: Editing_Checklist.md  Language_Editing_Guide.md  economic_damage_methodology.md
gee/: __init__.py  authenticator.py  data_fetcher.py  dem_processor.py  ecological_index.py  export_roi.py  fao_soil_zones.py  local_processor.py  ndvi_processor.py  soil_processor.py  water_processor.py
grid/: __init__.py  cell_calculator.py  ellipse_calculator.py  grid_generator.py  polygon_grid.py  shapefile_loader.py
gui/: PLAYWRIGHT_SETUP.md  README.md  UI_ANALYSIS_REPORT.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
indices/: __init__.py  base.py  q_otu.py  relief_index.py  (+3 more)
tests/: calibrate_simulation.py  create_manuscript_dirs.py  create_table_s7_runner.py  debug_imports.py  debug_pipeline.py  debug_simulation.py  debug_with_monitor.py  execute_comparative.py  execute_test.py  final_supplementary_run.py  fix_tqdm.py  generate_simple_viz.py  install_languagetool.bat  main.py  preprocess_gee.py  pyproject.toml  run_bibliography_formatting.bat  run_bibliography_test.py  test.py  test_algorithm_3.py  test_ballistics.py  test_bibliography.py  test_comparative.py  test_economic_damage.py  test_fao_soil.py  test_gee_integration.py  test_indices.py  test_language_check.py  test_monte_carlo.py  test_otu_logic.py  test_probability.py  test_run_worked_example.py  test_server_logic.py  test_server_pipeline.py  test_system_run.py  test_tqdm_fix.py
(+228 files in other folders)
